<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/result_count_text"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_gravity="center|center_vertical"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/result_score_text"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_gravity="center|center_vertical"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000"
        android:textSize="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/result_restart_btn"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_btn"
            android:onClick="onClick"
            android:text="@string/result_again"
            android:textAlignment="center"
            android:textSize="23dp" />

        <Button
            android:id="@+id/result_again_btn"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_btn"
            android:onClick="onClick"
            android:text="@string/result_wrong"
            android:textAlignment="center"
            android:textSize="23dp" />

        <Button
            android:id="@+id/result_save_btn"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_btn"
            android:onClick="onClick"
            android:text="@string/result_save"
            android:textAlignment="center"
            android:textSize="23dp" />

        <Button
            android:id="@+id/result_home_btn"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/category_btn"
            android:onClick="onClick"
            android:text="@string/result_home"
            android:textAlignment="center"
            android:textSize="23dp" />
    </LinearLayout>

</LinearLayout>